--- a/_posts/2016-11-03-Docker-1.md
+++ b/_posts/2016-11-03-Docker-1.md
@@ -15,7 +15,8 @@ Docker as the name suggests, are kind of containers that wrap a piece of softwar
 
 Installing Docker is super-easy and one can follow the steps at [docker](https://www.docker.com/products/docker#/) site for the installation and quick startup guide. I am using windows and you will see these application installed after the installer exits.
 
-![docker1.png]({{site.baseurl}}/_posts/docker1.png)
+![docker1.png]({{site.baseurl}}/images/docker1.png)
+
 
 You can open Docker Quickstart Terminal and can play with it by running basic commands(shown below).
 
@@ -34,12 +35,12 @@ Docker is based on concept of images which could be base OS or some other minima
 
 Below is the screenshot from my machine and you can see base image is ubuntu and with additional changes I create new images that is similar to version control where we have differnt versions of source code but in docker we are maining incremental images upon commiting.
 
-![docker2.png]({{site.baseurl}}/_posts/docker2.png)
+![docker2.png]({{site.baseurl}}/images/docker2.png)
 
 ### What is a container?
 Now whats the purpose of images if we dont run it and use it. Whenever we start an image of our interest, docker create containers which are kind of instance of that image. we can run multiple conatiners of an image. In the screenshot below I started an image in my docker with bash shell or I can run it in background. I can see the list of running containers with the command **docker ps**
 
-![docker3.png]({{site.baseurl}}/_posts/docker3.png)
+![docker3.png]({{site.baseurl}}/images/docker3.png)
 
 ### Accessing our container from host network or some other containers?
 There are basically 3 approaches for this
