--- a/_posts/2016-11-04-Git-1.md
+++ b/_posts/2016-11-04-Git-1.md
@@ -1,1 +1,7 @@
+---
+published: false
+layout: post
+---
+## Starting with Git Version Control
 
+We all developers understand the value of version control management for the application we are developing. Small project can survive version control but if we are creating enterprise level applicaiton and not using any version control we are in big trouble. I am not going to write about the various version control systems available and which one is better in this post but start directly with the GIT version control which currently is the most popular version control.
